--- a/styles-projectPage.css
+++ b/styles-projectPage.css
@@ -42,6 +42,9 @@
     background-image: url('assets/proj-ethereal/feature.png');
 }
 
+.featuredImage-desert {
+    background-image: url('assets/proj-desert/feature.png');
+}
 
 .description {
     margin-top: 50px;
