--- a/styles-aboutPage.css
+++ b/styles-aboutPage.css
@@ -1,3 +1,18 @@
+body,
+html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.content-body {
+    flex: 1;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
 .profilePage {
     margin-top: 150px;
 }
