--- a/styles-general.css
+++ b/styles-general.css
@@ -143,6 +143,7 @@ body.scrolled .floating-navbar {
 
 
 /* ------------------- footer starts -------------------*/
+
 .footer-gallery {
     margin-top: 100px;
     display: flex;
@@ -172,6 +173,26 @@ body.scrolled .floating-navbar {
     padding: 50px 13% 30px 10%;
     width: 100%;
     box-sizing: border-box;
+}
+
+/* 
+.footer-alone {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: blue;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+} */
+
+.footer-alone:after {
+    content: "";
+    display: block;
+    height: 100px;
 }
 
 .footer-left {
@@ -296,6 +317,7 @@ img {
     text-align: left;
 }
 
+/* ------------------- media queries -------------------*/
 /* Desktop */
 @media (min-width: 1025px) {
     .all-content {
