--- a/styles-general.css
+++ b/styles-general.css
@@ -153,6 +153,13 @@ body.scrolled .floating-navbar {
     padding: 10px 10% 0px 10%;
     width: 100%;
     box-sizing: border-box;
+    padding-bottom: 30px;
+}
+
+.gallery-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .footer {
@@ -221,16 +228,17 @@ body.scrolled .floating-navbar {
     flex: 0 0 34%;
     box-sizing: border-box;
     margin: 8%;
+    margin-bottom: 0%;
     text-align: center;
     position: relative;
 }
 
-.gallery-item:hover .project-title {
+.gallery-item:hover .gallery-project-title {
     color: rgba(255, 255, 255, 1);
     transition: color 0.5s;
 }
 
-.project-title {
+.gallery-project-title {
     position: absolute;
     bottom: 10px;
     left: 10px;
@@ -256,7 +264,7 @@ body.scrolled .floating-navbar {
     position: absolute;
     top: 50%;
     right: 10px;
-    transform: translateY(-50%);
+    /* transform: translateY(-50%); */
     background-color: transparent;
     color: #839DB5;
     border: none;
