--- a/styles-indexPage.css
+++ b/styles-indexPage.css
@@ -60,7 +60,11 @@
     transition: filter 0.5s ease;
 }
 
-/* --------------menu part--------------- */
+
+/* =================================================================== */
+/* =================================================================== */
+
+/* --------------------- Featured Projects ---------------------- */
 
 .project-container {
     justify-content: center;
@@ -307,3 +311,9 @@
     opacity: 1;
     transform: translateX(-50%);
 }
+
+
+/* =================================================================== */
+/* =================================================================== */
+
+/* --------------------- All Projects ---------------------- */
