--- a/styles-indexPage.css
+++ b/styles-indexPage.css
@@ -317,3 +317,131 @@
 /* =================================================================== */
 
 /* --------------------- All Projects ---------------------- */
+
+.filter-menu {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin-bottom: 20px;
+}
+
+.filter-button {
+    margin: 5px;
+    padding: 8px 12px;
+    border: none;
+    background-color: #ffffff;
+    color: #586a7b;
+    cursor: pointer;
+    border: #d6dce3 1px solid;
+    border-radius: 3px;
+    transition: background-color 0.5s;
+}
+
+.filter-button:hover,
+.filter-button.active {
+    background-color: #e0eaf1;
+}
+
+
+/* flex: 1 1 calc(33.3% - 40px);
+    margin: 20px; */
+
+.proj-block {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-content: flex-start;
+    align-items: flex-start;
+    gap: 20px;
+}
+
+.container-proj {
+    flex: 0 1 calc(25% - 20px);
+    padding: 0px;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+
+.image-container {
+    position: relative;
+    width: 100%;
+    aspect-ratio: 2/1.2;
+    object-fit: cover;
+    display: block;
+}
+
+.image-container img,
+.image-container video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.image-container video {
+    display: none;
+}
+
+.text-block {
+    margin: 10px 0 10px 0;
+}
+
+.menu-project-title {
+    color: #586a7b;
+    margin: 0 0 8px 0;
+    transition: 0.3s;
+    position: relative;
+    font-weight: 450;
+}
+
+.menu-project-title::after {
+    content: '';
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 0;
+    height: 1.2px;
+    background-color: #839DB5;
+    transition: width 0.5s, font-weight 1s;
+}
+
+.container-proj:hover .menu-project-title {
+    color: #466073;
+    font-weight: 650;
+}
+
+.container-proj:hover .menu-project-title::after {
+    width: 100%;
+}
+
+.menu-project-tages {
+    color: #6E8396;
+    margin: 0 0 2px 0;
+}
+
+.proj-description {
+    color: #afb7bf;
+    margin: 0 0 5px 0;
+    font-weight: 300;
+}
+
+/* scroll effect */
+.scroll-reveal {
+    opacity: 0;
+    transform: translateY(100px);
+    transition: opacity 0.6s, transform 0.6s;
+}
+
+.scroll-reveal.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.youtube-video {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 16/9;
+    margin-bottom: 10%;
+}
