--- a/styles-indexPage.css
+++ b/styles-indexPage.css
@@ -66,16 +66,46 @@
 
 /* --------------------- Featured Projects ---------------------- */
 
-.project-container {
+.featured-projects {
     justify-content: center;
     align-items: center;
     margin: 10%;
 }
 
-.proj-block {
+.feature-proj-block {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.feature-project-title {
+    color: #131b23;
+    margin: 0 0 8px 0;
+    transition: 0.3s;
+    position: relative;
+    font-weight: 450;
+}
+
+.feature-project-title::after {
+    content: '';
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 0;
+    height: 1.2px;
+    background-color: #839DB5;
+    transition: width 0.5s, font-weight 1s;
+}
+
+.feature-project-tages {
+    color: #4d5f70;
+    margin: 0 0 2px 0;
+}
+
+.feature-proj-description {
+    color: #afb7bf;
+    margin: 0 0 5px 0;
+    font-weight: 300;
 }
 
 /* container-proj -- all same */
@@ -328,7 +358,6 @@
 .filter-button {
     margin: 5px;
     padding: 8px 12px;
-    border: none;
     background-color: #ffffff;
     color: #586a7b;
     cursor: pointer;
@@ -340,6 +369,20 @@
 .filter-button:hover,
 .filter-button.active {
     background-color: #e0eaf1;
+}
+
+.default {
+    border: none;
+    background-color: #ffffff;
+    color: #9aa9b7;
+    cursor: pointer;
+    transition: background-color 0.5s;
+}
+
+.default:hover,
+.default.active {
+    text-decoration: underline;
+    background-color: #ffffff;
 }
 
 
@@ -355,7 +398,7 @@
     gap: 20px;
 }
 
-.container-proj {
+.all-proj-container {
     flex: 0 1 calc(25% - 20px);
     padding: 0px;
     box-sizing: border-box;
@@ -388,15 +431,15 @@
     margin: 10px 0 10px 0;
 }
 
-.menu-project-title {
-    color: #586a7b;
+.all-project-title {
+    color: #131b23;
     margin: 0 0 8px 0;
     transition: 0.3s;
     position: relative;
     font-weight: 450;
 }
 
-.menu-project-title::after {
+.all-project-title::after {
     content: '';
     position: absolute;
     bottom: -2px;
@@ -407,25 +450,26 @@
     transition: width 0.5s, font-weight 1s;
 }
 
-.container-proj:hover .menu-project-title {
+.all-proj-container:hover .all-project-title {
     color: #466073;
     font-weight: 650;
 }
 
-.container-proj:hover .menu-project-title::after {
+.all-proj-container:hover .all-project-title::after {
     width: 100%;
 }
 
-.menu-project-tages {
-    color: #6E8396;
+.all-project-tages {
+    color: #4d5f70;
     margin: 0 0 2px 0;
 }
 
-.proj-description {
+.all-proj-description {
     color: #afb7bf;
     margin: 0 0 5px 0;
     font-weight: 300;
 }
+
 
 /* scroll effect */
 .scroll-reveal {
