--- a/css/styles-otherProjectPage.css
+++ b/css/styles-otherProjectPage.css
@@ -36,11 +36,22 @@
 }
 
 .oProj-featureImage {
-    margin: 30px 0;
+    margin: 0;
     width: 100%;
     max-width: 800px;
     display: flex;
     justify-content: center;
+}
+
+.oProj-featureImage-verticle {
+    position: relative;
+    margin: 0;
+    align-items: left;
+}
+
+.oProj-featureImage-verticle img {
+    max-height: 40vh;
+    width: auto;
 }
 
 .oProj-detailedImage {
@@ -92,9 +103,33 @@
     margin-bottom: 20px;
     text-align: left;
     color: #737679;
+    line-height: 130%;
 }
 
 .oProj-pdfEmbed {
     width: 100%;
     max-width: 800px;
+}
+
+
+/* kindroot page long button (play button) */
+.play-now-button {
+    display: block;
+    width: 100%;
+    padding: 15px;
+    background-color: #839DB5;
+    /* 绿色背景 */
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    font-size: 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.play-now-button:hover {
+    background-color: #a2b9cf;
+    /* 悬停时的颜色 */
 }
