--- a/styles-general.css
+++ b/styles-general.css
@@ -323,6 +323,10 @@ img {
     text-align: left;
 }
 
+.gap {
+    height: 100px;
+}
+
 /* ------------------- media queries -------------------*/
 /* Desktop */
 @media (min-width: 1025px) {
