--- a/styles-general.css
+++ b/styles-general.css
@@ -124,21 +124,52 @@ body {
     cursor: pointer;
 }
 
+.left-section {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
 .icon img {
     height: 40px;
     width: 45px;
+    cursor: pointer;
 }
 
-.nav-links {
+.navbar-text {
+    font-size: 1em;
+    color: #9a9a9a;
+}
+
+.nav-links,
+.nav-center {
     display: flex;
     gap: 30px;
+}
+
+.nav-center {
+    flex-grow: 1;
+    justify-content: center;
+}
+
+.nav-category {
+    color: #b7cad8;
+    text-decoration: none;
+    transition: color 0.4s;
+    padding: 5px 15px;
+    font-size: 1.2em;
+    font-weight: 500;
+}
+
+.nav-category:hover {
+    color: #6E8396;
 }
 
 .nav-tab {
     color: #999;
     text-decoration: none;
     transition: color 0.4s;
-    padding: 5px 30%;
+    padding: 5px 15px;
     font-size: 1.2em;
 }
 
